@@ -1,3 +1,8 @@
+2008-10-16		olivier
+
+	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Add group
+	  selection.
+
 2008-10-12		olivier
 
 	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Prevent
